fixed z index on mobile nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,7 @@ nav.show-nav {
 	transform: translateX(0);
 	opacity: 1;
 	pointer-events: auto;
+	z-index: 3;
 }
 
 nav ul {
